<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scroolView">Home</string>
    <string name="menu_home">Home</string>
    <string name="imageButton3">Home</string>
    <string name="imageButton4">Home</string>
    <string name="imageButton2">Home</string>
    <string name="messagem">Home</string>
    <string name="Pisos">Home</string>
    <string name="Cozinha">Home</string>
    <string name="Banheiro">Home</string>
    <string name="activity_pisos"></string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toolbar">Pisos</string>
    <string name="voltar">Pisos</string>
    <string name="scroolviewpisos">Pisos</string>
    <string name="PisoBranco">Pisos</string>
    <string name="PisoAreia">Pisos</string>
    <string name="PisoAmadeirado">Pisos</string>
    <string name="PisoCreme">Pisos</string>
    <string name="PisoVerdeBranco">Pisos</string>
    <string name="RevestimentoQuadriBranco">Pisos</string>
    <string name="BotaoIgual">Pisos</string>
    <string name="EntradaQtdMetros">Pisos</string>
    <string name="Comprar">Item</string>
    <string name="addmais">Item</string>
    <string name="finalizarcompra">Item</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Lajes">content</string>
    <string name="title_activity_areia">Areia</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>