<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_777"
    tools:context="com.AdrianoDev.ADS_Ecommerce.ui.Calculadoras.Porta210X60cm">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="414dp"
        android:layout_height="48dp"
        android:background="@color/purple_700"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.MyApplication" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:contentDescription="@string/activity_pisos"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/voltar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-2dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/voltar"
        android:src="@drawable/voltar"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/descricao"
        android:layout_width="185dp"
        android:layout_height="110dp"
        android:layout_marginStart="-14dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemProduto"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/descricaoportaal1" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:layout_marginTop="307dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/valorportaal" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="96dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao"
        app:srcCompat="@drawable/calculadora" />

    <ImageView
        android:id="@+id/imagemProduto"
        android:layout_width="wrap_content"
        android:layout_height="238dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/portafullalumin" />

    <NumberPicker
        android:id="@+id/editTextNumber"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/espacopranumero"
        android:longClickable="false"
        android:scrollbarSize="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/BotaoIgual"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/botaoigual" />

    <TextView
        android:id="@+id/resultadofinal"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/valoreresultado"
        android:scaleType="centerInside"
        android:text="0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/comprar"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/Comprar"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/comprar" />

</androidx.constraintlayout.widget.ConstraintLayout>